# orange

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: orange_define_tests.cmake
orange/: common.h  noncopyable.h  scope_guard.h
test/: CMakeLists.txt  main.cpp  scope_guard_test.cpp
